# kats

./: .env.example  .gitignore  .gitmodules  README.md  kats_config.json  kronos_trade_demo.db  pyproject.toml
apps/web/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/engine/[...path]/: route.ts
apps/web/app/api/journal/equity/: route.ts
apps/web/app/api/journal/stats/: route.ts
apps/web/app/api/journal/trades/: route.ts
apps/web/app/journal/: page.tsx
apps/web/components/: EngineContext.tsx  EquityChart.tsx  Header.tsx  JournalView.tsx  LiveView.tsx  StatsBar.tsx  TradeTable.tsx
apps/web/hooks/: useWebSocket.ts
apps/web/lib/: db.ts  demoData.ts  types.ts
kronos_trade/: __init__.py  config.py  models.py
kronos_trade/api/: __init__.py  main.py
kronos_trade/dashboard/: tui.py
kronos_trade/data/: __init__.py  pipeline.py
kronos_trade/data/feeds/: __init__.py  alpaca_feed.py  base.py  databento_feed.py  oanda_feed.py
kronos_trade/execution/: __init__.py  router.py
kronos_trade/execution/brokers/: alpaca.py  base.py  ninjatrader.py  oanda.py
kronos_trade/kronos/: __init__.py  predictor.py  signals.py
kronos_trade/store/: __init__.py  db.py
kronos_trade/strategy/: __init__.py  engine.py  risk.py
kronos_trade/utils/: schedule.py
scripts/: backtest.py  fix_zshrc.sh  nt8_webhook_bridge.cs  run_system.py  seed_demo_db.py  setup.sh  terminal_launcher.py
tests/: conftest.py  test_dashboard.py  test_pipeline.py  test_risk.py  test_strategy.py
